@@ -80,6 +80,8 @@ Is there a huge objection to this patch?
 > the `srcdir`.
 > --[[Joey]]
 
+>> Slightly modified version of patch applied. --[[Joey]]
+
 >> Ok, I'll try to get it cleaned up and documented.
 
 There is a second location where this can be an issue.  That is in the
@@ -133,3 +135,5 @@ like this being accepted before I bothered.
 >>> Patch using rel2abs() works well - it no longer expands symlinks.
 
 >>>> That patch is applied now. --[[Joey]]
+
+[[tag done]]
