@@ -8,6 +8,9 @@ ikiwiki (2.55) UNRELEASED; urgency=low
   * Really fix bug with links to pages with names containing colons. 
     Previous fix mised a few cases.
   * Avoid troublesome abs_path calls in wrapper setup.
+  * Add allow_symlinks_before_srcdir config setting that can be used to avoid
+    a security check that is a good safe default, but problimatic overkill in
+    some situations.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
